Stop the home page jumping around when loading

--- a/www-src/app/styles/home.less
+++ b/www-src/app/styles/home.less
@@ -4,7 +4,7 @@
 		}
 
 	#credit {
-		height: 100px;
+		min-height: 325px;
 		margin-bottom: 15px;
 	}
 
